--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <script
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCTJYM4F7fH3ornhNUvzf4MKa7AzaLwW0&callback=initMap&v=weekly"
+      async
+    ></script>
     <title>Sales Monitor</title>
   </head>
   <body>
