--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,13 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCCTJYM4F7fH3ornhNUvzf4MKa7AzaLwW0&callback=initMap&v=weekly"
       async
     ></script>
+    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+
+
     <title>Sales Monitor</title>
   </head>
   <body>
